# lumicontrol

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  launch_gui.pyw  launch_rust_gui.vbs
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
apps/lumi-agent/: Cargo.toml  build.rs
apps/lumi-agent/src/: lib.rs  main.rs  support.rs
apps/lumi-ui/: index.html  package-lock.json  package.json  vite.config.ts
apps/lumi-ui/src/: App.tsx  api.ts  i18n.ts  styles.css  types.ts
apps/lumi-ui/src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
apps/lumi-ui/src-tauri/capabilities/: default.json
apps/lumi-ui/src-tauri/icons/: icon.icns
apps/lumi-ui/src-tauri/src/: lib.rs  main.rs
apps/lumi-ui/src-tauri/windows/: hooks.nsh
apps/lumi-ui/src/components/: CalibrationChart.tsx  ui.tsx
apps/lumi-ui/src/views/: CalibrationView.tsx  HardwareView.tsx  Onboarding.tsx  RulesView.tsx  SettingsView.tsx  StatusView.tsx  SupportView.tsx
crates/lumi-core/: Cargo.toml
crates/lumi-core/src/: lib.rs
crates/lumi-device/: Cargo.toml
crates/lumi-device/src/: lib.rs
crates/lumi-environment/: Cargo.toml
crates/lumi-environment/src/: lib.rs
crates/lumi-ipc/: Cargo.toml
crates/lumi-ipc/examples/: agent_probe.rs
crates/lumi-ipc/src/: lib.rs
crates/lumi-monitor-windows/: Cargo.toml
crates/lumi-monitor-windows/examples/: monitor_probe.rs
crates/lumi-monitor-windows/src/: lib.rs
crates/lumi-protocol/: Cargo.toml
crates/lumi-protocol/src/: lib.rs
crates/lumi-store/: Cargo.toml
crates/lumi-store/src/: lib.rs
docs/readme/: README.es.md  README.ja.md  README.ko.md  README.pt-BR.md  README.ru.md  README.tr.md  README.uk.md  README.zh-CN.md  README.zh-TW.md
docs/v2/: device-protocol-v2.md  environment-brightness.md  firmware-validation-2026-07-17.md  migration-plan.md  performance-baseline-2026-07-16.md  release-readiness.md  software-architecture.md
firmware/lumi-device/: README.md
firmware/lumi-device/lumi_device/: lumi_device.ino
firmware/lumi-device/profiles/: sensor-relay.json  sensor.json
src/: egui_gui.rs  main.rs  native_gui.rs
tests/: test_launchers.py
tools/: audit-dependencies.ps1  build-firmware.ps1  build-signed-release.ps1  flash-firmware.ps1  measure-process-resources.ps1  stage-agent-sidecar.ps1
tools/device-console/: Cargo.toml
tools/device-console/src/: main.rs
tools/device-simulator/: Cargo.toml
tools/device-simulator/src/: lib.rs  main.rs
