[package]
name = "lumi-ipc"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Versioned same-user named-pipe contract for LumiControl Agent and UI"

[dependencies]
lumi-core = { path = "../lumi-core" }
lumi-protocol = { path = "../lumi-protocol" }
lumi-store = { path = "../lumi-store" }
serde.workspace = true
serde_json.workspace = true
