[package]
name = "lumi-store"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Versioned, validated, atomic settings and state storage for LumiControl"

[dependencies]
lumi-core = { path = "../lumi-core" }
serde.workspace = true
serde_json.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
